--- a/LimaconCycloid/LimaconCycloid.tex
+++ b/LimaconCycloid/LimaconCycloid.tex
@@ -1,5 +1,5 @@
 \documentclass{ximera}
-\title{Arclength Theorems for Cycloids and Epicycloids}
+\title{Arclengths of Cycloids and Epicycloids}
 
 \newcommand{\pskip}{\vskip 0.1 in}
 
@@ -400,7 +400,7 @@ Three other examples:
 
 \begin{enumerate}
 
-\item \emph{Cardioids and Limacons:} When a circle rolls once around a fixed circle with the same radius (Figure 6), the $(a,b,a)$ prolate epicycloid is a limacon with polar equation $r=2a+2b\cos\theta$. Its arclength counts negatively around the loop of the limacon and the outer arclength exceeds the loop's length by the length $16a$ of the limacon's sister cardioid, twice that of the ordinary $a$-cycloid. 
+\item \emph{Cardioids and Limacons:} When a circle rolls once around a fixed circle with the same radius (Figure 6), the $(a,b,a)$ prolate epicycloid is a limacon with polar equation $r=2a+2b\cos\theta$. Its loop is the negative part and so the limacon's outer arclength exceeds the loop's by the length $16a$ of the limacon's sister cardioid, twice that of the ordinary $a$-cycloid. 
 
 \begin{onlineOnly}
     \begin{center}
@@ -410,15 +410,7 @@ Three other examples:
 
 \href{https://www.desmos.com/calculator/kuhagddz3r}{Wrapping Cycloids around Circles Limacon}
 
-\item \emph{Neprhroids and ??}
-
-\end{enumerate}
-
-
-
-
-
-\section{Nephroid}
+\item \emph{Neprhroids and ??:}
 
 \begin{onlineOnly}
     \begin{center}
@@ -427,6 +419,18 @@ Three other examples:
 \end{onlineOnly}
 
 \href{https://www.desmos.com/calculator/czhdwjarf3}{Wrapping Cycloids around Circles Nephroid}
+
+
+\item {Segments and Ellipses:}
+
+\end{enumerate}
+
+
+
+
+
+
+\section{Nephroid}
 
 
 %\begin{onlineOnly}
